frontend/tests/cases/positive/interfaces/instances/instanceConstraintHasCoeffectVar.gr
interface Simple a (b : Coeffect) (c : b)

data A a = B

-- A constraint with an application to a coeffect
instance {Simple a Nat 1} => Simple (A a) Nat 1
