frontend/tests/cases/negative/noInstanceForConstraintInInstanceHead.gr
interface Simple a

interface {Simple a} => Simple2 a

data A = A'

-- 'A' is not an instance of 'Simple'
instance Simple2 A
